src/parser/mapping/mappingParser.js
// Generated from mapping.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var mappingListener = require('./mappingListener').mappingListener;
var grammarFileName = "mapping.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'map'", "'='", "'uses'", "'as'", "'alias'", 
                     "'imports'", "'group'", "'{'", "'}'", "'<<'", "'>>'", 
                     "'extends'", "'('", "','", "')'", "':'", "'->'", "';'", 
                     "'..'", "'*'", "'.'", "'default'", "'where'", "'check'", 
                     "'log'", "'then'", "'types'", "'type+'", "'first'", 
                     "'not_first'", "'last'", "'not_last'", "'only_one'", 
                     "'share'", "'collate'", "'source'", "'target'", "'queried'", 
                     "'produced'", "'['", "']'", "'+'", "'-'", "'/'", "'div'", 
                     "'mod'", "'&'", "'|'", "'<='", "'<'", "'>'", "'>='", 
                     "'is'", "'~'", "'!='", "'!~'", "'in'", "'contains'", 
                     "'and'", "'or'", "'xor'", "'implies'", "'%'", "'year'", 
                     "'month'", "'week'", "'day'", "'hour'", "'minute'", 
                     "'second'", "'millisecond'", "'years'", "'months'", 
                     "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'", 
                     "'milliseconds'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, "DELIMITEDIDENTIFIER", 
                      "DATETIME", "TIME", "IDENTIFIER", "QUOTEDIDENTIFIER", 
                      "STRING", "NUMBER", "WS", "COMMENT", "LINE_COMMENT", 
                      "INTEGER", "BOOL" ];

var ruleNames =  [ "prog", "mapId", "url", "identifier", "structure", "structureAlias", 
                   "imports", "group", "mrules", "typeMode", "mextends", 
                   "parameters", "parameter", "type", "mrule", "mruleName", 
                   "mruleSources", "mruleSource", "mruleTargets", "sourceType", 
                   "upperBound", "mruleContext", "sourceDefault", "alias", 
                   "whereClause", "checkClause", "log", "dependent", "mruleTarget", 
                   "transform", "invocation", "paramList", "param", "fhirPath", 
                   "literal", "groupTypeMode", "sourceListMode", "targetListMode", 
                   "inputMode", "modelMode", "expression", "term", "externalConstant", 
                   "functn", "quantity", "unit", "dateTimePrecision", "pluralDateTimePrecision", 
                   "typeSpecifier", "qualifiedIdentifier" ];

function mappingParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

mappingParser.prototype = Object.create(antlr4.Parser.prototype);
mappingParser.prototype.constructor = mappingParser;

Object.defineProperty(mappingParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

mappingParser.EOF = antlr4.Token.EOF;
mappingParser.T__0 = 1;
mappingParser.T__1 = 2;
mappingParser.T__2 = 3;
mappingParser.T__3 = 4;
mappingParser.T__4 = 5;
mappingParser.T__5 = 6;
mappingParser.T__6 = 7;
mappingParser.T__7 = 8;
mappingParser.T__8 = 9;
mappingParser.T__9 = 10;
mappingParser.T__10 = 11;
mappingParser.T__11 = 12;
mappingParser.T__12 = 13;
mappingParser.T__13 = 14;
mappingParser.T__14 = 15;
mappingParser.T__15 = 16;
mappingParser.T__16 = 17;
mappingParser.T__17 = 18;
mappingParser.T__18 = 19;
mappingParser.T__19 = 20;
mappingParser.T__20 = 21;
mappingParser.T__21 = 22;
mappingParser.T__22 = 23;
mappingParser.T__23 = 24;
mappingParser.T__24 = 25;
mappingParser.T__25 = 26;
mappingParser.T__26 = 27;
mappingParser.T__27 = 28;
mappingParser.T__28 = 29;
mappingParser.T__29 = 30;
mappingParser.T__30 = 31;
mappingParser.T__31 = 32;
mappingParser.T__32 = 33;
mappingParser.T__33 = 34;
mappingParser.T__34 = 35;
mappingParser.T__35 = 36;
mappingParser.T__36 = 37;
mappingParser.T__37 = 38;
mappingParser.T__38 = 39;
mappingParser.T__39 = 40;
mappingParser.T__40 = 41;
mappingParser.T__41 = 42;
mappingParser.T__42 = 43;
mappingParser.T__43 = 44;
mappingParser.T__44 = 45;
mappingParser.T__45 = 46;
mappingParser.T__46 = 47;
mappingParser.T__47 = 48;
mappingParser.T__48 = 49;
mappingParser.T__49 = 50;
mappingParser.T__50 = 51;
mappingParser.T__51 = 52;
mappingParser.T__52 = 53;
mappingParser.T__53 = 54;
mappingParser.T__54 = 55;
mappingParser.T__55 = 56;
mappingParser.T__56 = 57;
mappingParser.T__57 = 58;
mappingParser.T__58 = 59;
mappingParser.T__59 = 60;
mappingParser.T__60 = 61;
mappingParser.T__61 = 62;
mappingParser.T__62 = 63;
mappingParser.T__63 = 64;
mappingParser.T__64 = 65;
mappingParser.T__65 = 66;
mappingParser.T__66 = 67;
mappingParser.T__67 = 68;
mappingParser.T__68 = 69;
mappingParser.T__69 = 70;
mappingParser.T__70 = 71;
mappingParser.T__71 = 72;
mappingParser.T__72 = 73;
mappingParser.T__73 = 74;
mappingParser.T__74 = 75;
mappingParser.T__75 = 76;
mappingParser.T__76 = 77;
mappingParser.T__77 = 78;
mappingParser.T__78 = 79;
mappingParser.DELIMITEDIDENTIFIER = 80;
mappingParser.DATETIME = 81;
mappingParser.TIME = 82;
mappingParser.IDENTIFIER = 83;
mappingParser.QUOTEDIDENTIFIER = 84;
mappingParser.STRING = 85;
mappingParser.NUMBER = 86;
mappingParser.WS = 87;
mappingParser.COMMENT = 88;
mappingParser.LINE_COMMENT = 89;
mappingParser.INTEGER = 90;
mappingParser.BOOL = 91;

mappingParser.RULE_prog = 0;
mappingParser.RULE_mapId = 1;
mappingParser.RULE_url = 2;
mappingParser.RULE_identifier = 3;
mappingParser.RULE_structure = 4;
mappingParser.RULE_structureAlias = 5;
mappingParser.RULE_imports = 6;
mappingParser.RULE_group = 7;
mappingParser.RULE_mrules = 8;
mappingParser.RULE_typeMode = 9;
mappingParser.RULE_mextends = 10;
mappingParser.RULE_parameters = 11;
mappingParser.RULE_parameter = 12;
mappingParser.RULE_type = 13;
mappingParser.RULE_mrule = 14;
mappingParser.RULE_mruleName = 15;
mappingParser.RULE_mruleSources = 16;
mappingParser.RULE_mruleSource = 17;
mappingParser.RULE_mruleTargets = 18;
mappingParser.RULE_sourceType = 19;
mappingParser.RULE_upperBound = 20;
mappingParser.RULE_mruleContext = 21;
mappingParser.RULE_sourceDefault = 22;
mappingParser.RULE_alias = 23;
mappingParser.RULE_whereClause = 24;
mappingParser.RULE_checkClause = 25;
mappingParser.RULE_log = 26;
mappingParser.RULE_dependent = 27;
mappingParser.RULE_mruleTarget = 28;
mappingParser.RULE_transform = 29;
mappingParser.RULE_invocation = 30;
mappingParser.RULE_paramList = 31;
mappingParser.RULE_param = 32;
mappingParser.RULE_fhirPath = 33;
mappingParser.RULE_literal = 34;
mappingParser.RULE_groupTypeMode = 35;
mappingParser.RULE_sourceListMode = 36;
mappingParser.RULE_targetListMode = 37;
mappingParser.RULE_inputMode = 38;
mappingParser.RULE_modelMode = 39;
mappingParser.RULE_expression = 40;
mappingParser.RULE_term = 41;
mappingParser.RULE_externalConstant = 42;
mappingParser.RULE_functn = 43;
mappingParser.RULE_quantity = 44;
mappingParser.RULE_unit = 45;
mappingParser.RULE_dateTimePrecision = 46;
mappingParser.RULE_pluralDateTimePrecision = 47;
mappingParser.RULE_typeSpecifier = 48;
mappingParser.RULE_qualifiedIdentifier = 49;

function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.mapId = function() {
    return this.getTypedRuleContext(MapIdContext,0);
};

ProgContext.prototype.EOF = function() {
    return this.getToken(mappingParser.EOF, 0);
};

ProgContext.prototype.structure = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StructureContext);
    } else {
        return this.getTypedRuleContext(StructureContext,i);
    }
};

ProgContext.prototype.imports = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ImportsContext);
    } else {
        return this.getTypedRuleContext(ImportsContext,i);
    }
};

ProgContext.prototype.group = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GroupContext);
    } else {
        return this.getTypedRuleContext(GroupContext,i);
    }
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitProg(this);
	}
};




mappingParser.ProgContext = ProgContext;

mappingParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, mappingParser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100;
        this.mapId();
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===mappingParser.T__2) {
            this.state = 101;
            this.structure();
            this.state = 106;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 110;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===mappingParser.T__5) {
            this.state = 107;
            this.imports();
            this.state = 112;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 114; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 113;
            this.group();
            this.state = 116; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===mappingParser.T__6);
        this.state = 118;
        this.match(mappingParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MapIdContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_mapId;
    return this;
}

MapIdContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MapIdContext.prototype.constructor = MapIdContext;

MapIdContext.prototype.url = function() {
    return this.getTypedRuleContext(UrlContext,0);
};

MapIdContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

MapIdContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterMapId(this);
	}
};

MapIdContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitMapId(this);
	}
};




mappingParser.MapIdContext = MapIdContext;

mappingParser.prototype.mapId = function() {

    var localctx = new MapIdContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, mappingParser.RULE_mapId);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(mappingParser.T__0);
        this.state = 121;
        this.url();
        this.state = 122;
        this.match(mappingParser.T__1);
        this.state = 123;
        this.identifier();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function UrlContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_url;
    return this;
}

UrlContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UrlContext.prototype.constructor = UrlContext;

UrlContext.prototype.DELIMITEDIDENTIFIER = function() {
    return this.getToken(mappingParser.DELIMITEDIDENTIFIER, 0);
};

UrlContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterUrl(this);
	}
};

UrlContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitUrl(this);
	}
};




mappingParser.UrlContext = UrlContext;

mappingParser.prototype.url = function() {

    var localctx = new UrlContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, mappingParser.RULE_url);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this.match(mappingParser.DELIMITEDIDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IdentifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_identifier;
    return this;
}

IdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdentifierContext.prototype.constructor = IdentifierContext;

IdentifierContext.prototype.IDENTIFIER = function() {
    return this.getToken(mappingParser.IDENTIFIER, 0);
};

IdentifierContext.prototype.DELIMITEDIDENTIFIER = function() {
    return this.getToken(mappingParser.DELIMITEDIDENTIFIER, 0);
};

IdentifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterIdentifier(this);
	}
};

IdentifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitIdentifier(this);
	}
};




mappingParser.IdentifierContext = IdentifierContext;

mappingParser.prototype.identifier = function() {

    var localctx = new IdentifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, mappingParser.RULE_identifier);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 127;
        _la = this._input.LA(1);
        if(!(_la===mappingParser.DELIMITEDIDENTIFIER || _la===mappingParser.IDENTIFIER)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StructureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_structure;
    return this;
}

StructureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructureContext.prototype.constructor = StructureContext;

StructureContext.prototype.url = function() {
    return this.getTypedRuleContext(UrlContext,0);
};

StructureContext.prototype.modelMode = function() {
    return this.getTypedRuleContext(ModelModeContext,0);
};

StructureContext.prototype.structureAlias = function() {
    return this.getTypedRuleContext(StructureAliasContext,0);
};

StructureContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterStructure(this);
	}
};

StructureContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitStructure(this);
	}
};




mappingParser.StructureContext = StructureContext;

mappingParser.prototype.structure = function() {

    var localctx = new StructureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, mappingParser.RULE_structure);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        this.match(mappingParser.T__2);
        this.state = 130;
        this.url();
        this.state = 132;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===mappingParser.T__4) {
            this.state = 131;
            this.structureAlias();
        }

        this.state = 134;
        this.match(mappingParser.T__3);
        this.state = 135;
        this.modelMode();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StructureAliasContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_structureAlias;
    return this;
}

StructureAliasContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructureAliasContext.prototype.constructor = StructureAliasContext;

StructureAliasContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

StructureAliasContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterStructureAlias(this);
	}
};

StructureAliasContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitStructureAlias(this);
	}
};




mappingParser.StructureAliasContext = StructureAliasContext;

mappingParser.prototype.structureAlias = function() {

    var localctx = new StructureAliasContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, mappingParser.RULE_structureAlias);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 137;
        this.match(mappingParser.T__4);
        this.state = 138;
        this.identifier();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImportsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_imports;
    return this;
}

ImportsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportsContext.prototype.constructor = ImportsContext;

ImportsContext.prototype.url = function() {
    return this.getTypedRuleContext(UrlContext,0);
};

ImportsContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterImports(this);
	}
};

ImportsContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitImports(this);
	}
};




mappingParser.ImportsContext = ImportsContext;

mappingParser.prototype.imports = function() {

    var localctx = new ImportsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, mappingParser.RULE_imports);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this.match(mappingParser.T__5);
        this.state = 141;
        this.url();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GroupContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_group;
    return this;
}

GroupContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GroupContext.prototype.constructor = GroupContext;

GroupContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

GroupContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

GroupContext.prototype.mrules = function() {
    return this.getTypedRuleContext(MrulesContext,0);
};

GroupContext.prototype.mextends = function() {
    return this.getTypedRuleContext(MextendsContext,0);
};

GroupContext.prototype.typeMode = function() {
    return this.getTypedRuleContext(TypeModeContext,0);
};

GroupContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterGroup(this);
	}
};

GroupContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitGroup(this);
	}
};




mappingParser.GroupContext = GroupContext;

mappingParser.prototype.group = function() {

    var localctx = new GroupContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, mappingParser.RULE_group);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 143;
        this.match(mappingParser.T__6);
        this.state = 144;
        this.identifier();
        this.state = 145;
        this.parameters();
        this.state = 147;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===mappingParser.T__11) {
            this.state = 146;
            this.mextends();
        }

        this.state = 150;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===mappingParser.T__9) {
            this.state = 149;
            this.typeMode();
        }

        this.state = 152;
        this.mrules();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MrulesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_mrules;
    return this;
}

MrulesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MrulesContext.prototype.constructor = MrulesContext;

MrulesContext.prototype.mrule = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MruleContext);
    } else {
        return this.getTypedRuleContext(MruleContext,i);
    }
};

MrulesContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterMrules(this);
	}
};

MrulesContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitMrules(this);
	}
};




mappingParser.MrulesContext = MrulesContext;

mappingParser.prototype.mrules = function() {

    var localctx = new MrulesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, mappingParser.RULE_mrules);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 154;
        this.match(mappingParser.T__7);
        this.state = 156; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 155;
            this.mrule();
            this.state = 158; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===mappingParser.DELIMITEDIDENTIFIER || _la===mappingParser.IDENTIFIER);
        this.state = 160;
        this.match(mappingParser.T__8);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeModeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_typeMode;
    return this;
}

TypeModeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeModeContext.prototype.constructor = TypeModeContext;

TypeModeContext.prototype.groupTypeMode = function() {
    return this.getTypedRuleContext(GroupTypeModeContext,0);
};

TypeModeContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterTypeMode(this);
	}
};

TypeModeContext.prototype.exitRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.exitTypeMode(this);
	}
};




mappingParser.TypeModeContext = TypeModeContext;

mappingParser.prototype.typeMode = function() {

    var localctx = new TypeModeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, mappingParser.RULE_typeMode);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 162;
        this.match(mappingParser.T__9);
        this.state = 163;
        this.groupTypeMode();
        this.state = 164;
        this.match(mappingParser.T__10);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MextendsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mappingParser.RULE_mextends;
    return this;
}

MextendsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MextendsContext.prototype.constructor = MextendsContext;

MextendsContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

MextendsContext.prototype.enterRule = function(listener) {
    if(listener instanceof mappingListener ) {
        listener.enterMextends(this);
	}
};
